tests/passes/remove-comb-groups/comb-with-static.expect
---CODE---
1
---STDERR---
Error: tests/passes/remove-comb-groups/comb-with-static.futil
3 |component main<"static"=1>(in: 32) -> () {
  |^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ Pass `remove-comb-groups` assumption violated: Component main has both a top-level "static" annotations and combinational groups which is not supported
